main.tf
#PROVIDERS

provider "aws" {
    access_key = var.aws_access_key
    secret_key = var.aws_secret_key
    region = "us-east-1"
}

#DATA 
data "aws_ssm_parameter" "ami" {
    name = "/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2"
}

#RESOURCES
#networking 
resource "aws_vpc" "vpc" {
  cidr_block = "10.0.0.0/16"
  enable_dns_hostnames = "true"

  tags = local.common_tags
}

resource "aws_internet_gateway" "igw" {
    vpc_id = aws_vpc.vpc.id
}

resource "aws_subnet" "subnet1" {
    cidr_block =  "10.0.0.0/24"
    vpc_id = aws_vpc.vpc.id
    map_public_ip_on_launch = "true"
}

#routing 
 resource "aws_route_table" "rtb" {
     vpc_id = aws_vpc.vpc.id

     route {
         cidr_block = "0.0.0.0/0"
         gateway_id =  aws_internet_gateway.igw.id 
     }
 }

 resource "aws_route_table_association" "rta-subnet1" {
     subnet_id = aws_subnet.subnet1.id
     route_table_id = aws_route_table.rtb.id
 }

 #security groups

 resource "aws_security_group" "nginx_sg" {
   name = "nginx_sg"
   vpc_id = aws_vpc.vpc.id 

   #HTTP access from n e where 
   ingress {
       from_port = 80
       to_port = 80
       protocol = "tcp"
       cidr_blocks = ["0.0.0.0/0"]
   }

   # outbound internet access
   egress{
       from_port = 0
       to_port = 0
       protocol = "-1"
       cidr_blocks = ["0.0.0.0/0"]
   }
   tags = local.common_tags
 }

 #INSTANCES 
 resource "aws_instance" "nginx1" {
   ami = nonsensitive(data.aws_ssm_parameter.ami.value)
   instance_type = "t2.micro"
   subnet_id = aws_subnet.subnet1.id
   vpc_security_group_ids = [aws_security_group.nginx-sg.id]

   user_data = <<EOF
   #! /bin/bash
   sudo amazon-linux-extras install -y nginx1
   sudo service nginx start
   sudo rm /usr/share/nginx/html/index.html
   echo '<html><head><title>Taco team server</title></head><body style=\"background-color:#1F778D\"><p>hello world</p></body></html>
   EOF

   tags = local.common_tags
 }
